--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -94,6 +94,7 @@
                             </a>
                             <div class="dropdown-menu m-0" aria-labelledby="navbarDropdown">
                                 <a  class="dropdown-item" th:href="@{/users/updateRole}">Update Role</a>
+                                <a  class="dropdown-item" th:href="@{/statistics}">Statistics</a>
                                 <div class="dropdown-divider"></div>
                             </div>
                         </li>
@@ -118,7 +119,7 @@
 
                     <th:block sec:authorize="isAuthenticated()">
                         <li class="nav-item"><a class="nav-link">
-                            <form th:action="@{/users/logout}" method="POST">
+                            <form th:action="@{/users/logout}" th:method="POST">
                                 <button type="submit" class="btn btn-primary">Logout</button>
                             </form>
                         </a></li>
